# crogs-bot

./: .gitignore  .pre-commit-config.yaml  README.md  config.dev.yaml  config.yaml  main.py  pyproject.toml  requirements.txt
src/: config_management.py  llm.py  logger.py  settings_manager.py  translator.py  web_api.py
src/bot_modules/: base.py  holibot.py  imagebot.py  jokebot.py  newsbot.py
src/holiday_scrapers/: __init__.py  base.py  checkiday_scraper.py  officeholidays_scraper.py  timeanddate_scraper.py
src/translators/: base.py  google_translator.py  llm_translator.py
webapp/: index.html  script.js  style.css
